(chore): fix code smell