@@ -30,7 +30,6 @@ import lombok.NoArgsConstructor;
 import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * GetAllMethodsSnippet.
@@ -47,6 +46,6 @@ public class GetAllMethodsSnippet {
   public static List<String> getAllMethods(final Class<?> cls) {
     return Arrays.stream(cls.getDeclaredMethods())
         .map(Method::getName)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
